--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<!--
 <div id="wrapper">
 
   <div class="github-fork-ribbon-wrapper right">
@@ -18,10 +18,11 @@
         <a href="https://github.com/somlor/kanban">Fork me on GitHub</a>
     </div>
   </div>
+  -->
 
   <div id="header">
     <div class="header-logo">
-      <h1><a href="#/">KANBAN <span>看板</span></a></h1>
+      <h1><a href="#/">Trello2</span></a></h1>
     </div>
     <div class="header-user">
       <% if logged_in? %>
@@ -38,7 +39,7 @@
   </div>
 
   <div id="footer">
-    <p>
+<!--    <p>
       KANBAN is hand carved with Ruby on Rails, Backbone.js, and green tea
       by Sean Omlor.
     </p>
@@ -46,6 +47,7 @@
       <a href="http://seanomlor.com">Hire me</a>.
     </p>
   </div>
+  -->
 </div>
 
 </body>
