--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kanban</title>
+  <title>Mello</title>
   <%= favicon_link_tag "/favicon.ico" %>
   <%= stylesheet_link_tag "application", media: "all" %>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata|Open+Sans" rel="stylesheet" type="text/css">
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
@@ -22,7 +21,7 @@
 
   <div id="header">
     <div class="header-logo">
-      <h1><a href="#/">Trello2</span></a></h1>
+      <h1><a href="#/">Mello</span></a></h1>
     </div>
     <div class="header-user">
       <% if logged_in? %>
